Fix P2P connection URL validation
Make the validators focused and fix validation runtime error when
connection-url is not set.

(cherry-picked from commit: 98ddd1cd03b516ce850504d45c53e7ccf6c9d256)